Added instanced rendering

--- a/Voxel/Voxel.vcxproj
+++ b/Voxel/Voxel.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="src\OpenGL\VertexArray.cpp" />
     <ClCompile Include="src\OpenGL\VertexBuffer.cpp" />
     <ClCompile Include="src\Rendering\CubeRenderer.cpp" />
+    <ClCompile Include="src\Rendering\InstancedCubeRenderer.cpp" />
     <ClCompile Include="src\Rendering\PerspectiveCamera.cpp" />
     <ClCompile Include="src\VoxelSystem\Chunk.cpp" />
     <ClCompile Include="src\VoxelSystem\Voxel.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="src\OpenGL\VertexArray.hpp" />
     <ClInclude Include="src\OpenGL\VertexBuffer.hpp" />
     <ClInclude Include="src\Rendering\CubeRenderer.hpp" />
+    <ClInclude Include="src\Rendering\InstancedCubeRenderer.hpp" />
     <ClInclude Include="src\Rendering\PerspectiveCamera.hpp" />
     <ClInclude Include="src\VoxelSystem\Chunk.hpp" />
     <ClInclude Include="src\VoxelSystem\Voxel.hpp" />
@@ -171,6 +173,8 @@
   <ItemGroup>
     <None Include="src\Shaders\cube.frag" />
     <None Include="src\Shaders\cube.vert" />
+    <None Include="src\Shaders\instancedCube.frag" />
+    <None Include="src\Shaders\instancedCube.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
