--- a/Voxel/Voxel.vcxproj.filters
+++ b/Voxel/Voxel.vcxproj.filters
@@ -107,6 +107,15 @@
     <ClInclude Include="src\VoxelSystem\ChunkManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Externals\stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Externals\FastNoiseLite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inputCallbacks.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Shaders\cube.vert" />
