--- a/Voxel/Voxel.vcxproj.filters
+++ b/Voxel/Voxel.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="test.hpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Rendering\Mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.hpp">
@@ -116,11 +119,16 @@
     <ClInclude Include="inputCallbacks.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Rendering\Mesh.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Shaders\cube.vert" />
     <None Include="src\Shaders\cube.frag" />
     <None Include="src\Shaders\instancedCube.vert" />
     <None Include="src\Shaders\instancedCube.frag" />
+    <None Include="src\Shaders\mesh.vert" />
+    <None Include="src\Shaders\mesh.frag" />
   </ItemGroup>
 </Project>
