--- a/Voxel/imgui.ini
+++ b/Voxel/imgui.ini
@@ -9,12 +9,17 @@ Size=238,323
 Collapsed=0
 
 [Window][DebugMenu]
-Pos=5,1
+Pos=1,0
 Size=494,118
 Collapsed=0
 
 [Window][ShadowMap]
 Pos=563,40
 Size=399,266
+Collapsed=0
+
+[Window][Test]
+Pos=14,3
+Size=352,390
 Collapsed=0
 
