--- a/Voxel/Voxel.vcxproj.filters
+++ b/Voxel/Voxel.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClCompile Include="src\Rendering\InstancedCubeRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="test.hpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\Rendering\Mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -91,6 +88,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Externals\includes\glm\detail\glm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\VoxelSystem\ChunkManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1190,6 +1190,30 @@
     <ClInclude Include="Externals\includes\nlohmann\ordered_map.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Externals\includes\Octree\array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Externals\includes\Octree\array2d.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Externals\includes\Octree\numtraits.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Externals\includes\Octree\octree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Externals\includes\Octree\point3d.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Externals\includes\Octree\shareddata.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Externals\includes\Octree\tinyvector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utility\Utility.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Shaders\cube.vert" />
@@ -1608,5 +1632,11 @@
     <None Include="Externals\includes\glm\gtx\wrap.inl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="Externals\includes\Octree\Makefile" />
+    <None Include="Externals\includes\Octree\octree.tcc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Externals\includes\Octree\License.txt" />
+    <Text Include="Externals\includes\Octree\Readme.txt" />
   </ItemGroup>
 </Project>
